--- a/styles/main.css
+++ b/styles/main.css
@@ -29,25 +29,6 @@ body {
   /* Style the navbar links */
 }
 
-#navbar .displayNav {
-  top: 0px;
-  -webkit-transition: 0.3s;
-  transition: 0.3s;
-  opacity: 1;
-}
-
-#navbar .flexboxCenter {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-}
-
 #navbar #home img {
   width: 10%;
   margin: 3% auto;
@@ -95,6 +76,25 @@ body {
   bottom: auto;
   top: 0;
   width: 80%;
+}
+
+.displayNav {
+  top: 0px;
+  -webkit-transition: 0.3s;
+  transition: 0.3s;
+  opacity: 1;
+}
+
+.flexboxCenter {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 
 .home {
@@ -182,6 +182,9 @@ body {
 
 /* ----------- SMARTPHONES ----------- */
 @media only screen and (max-width: 415px) {
+  #navbar {
+    visibility: hidden;
+  }
   .home {
     width: 100%;
     -ms-grid-columns: 1fr;
