--- a/styles/main.css
+++ b/styles/main.css
@@ -3,10 +3,10 @@ body {
   background-image: url("../images/mainbg.png");
   background-position: center;
   background-repeat: repeat;
-  height: 1500px;
 }
 
 #navbar {
+  z-index: 999;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -20,12 +20,13 @@ body {
   text-align: center;
   font-family: 'Raleway', sans-serif;
   font-size: 1em;
-  background-color: rgba(241, 240, 239, 0.5);
+  background-color: rgba(112, 157, 170, 0.1);
   position: fixed;
+  top: -60px;
   height: 60px;
   width: 100%;
-  -webkit-transition: top 0.5s;
-  transition: top 0.5s;
+  transition: all ease-out 0.5s;
+  -webkit-transition: all ease-out 0.5s;
   /* Style the navbar links */
 }
 
@@ -99,7 +100,6 @@ body {
 
 .home {
   width: 100%;
-  height: auto;
   display: -ms-grid;
   display: grid;
   -ms-grid-columns: 1fr 1fr;
@@ -178,6 +178,25 @@ body {
             transform: translateX(0%);
     opacity: 1;
   }
+}
+
+.space {
+  height: 60px;
+  width: 100%;
+}
+
+section {
+  width: 100%;
+  height: 650px;
+}
+
+.sections {
+  height: 590px;
+  bottom: 0;
+}
+
+.sections h1 {
+  margin: 0 auto;
 }
 
 /* ----------- SMARTPHONES ----------- */
