--- a/styles/main.scss
+++ b/styles/main.scss
@@ -5,22 +5,23 @@ body {
     background-image: url("../images/mainbg.png");
     background-position: center;
     background-repeat: repeat;
-    height: 1500px;
 }
 
 #navbar {
+    z-index: 999;
     display: flex;
     flex-direction: row;
     justify-content: center;
     text-align: center;
     font-family: 'Raleway', sans-serif;
     font-size: 1em;
-    background-color: $nav-light;
+    background-color: $bg-light;
     position: fixed; 
-    // top: -60px; 
+    top: -60px; 
     height: 60px;
     width: 100%; 
-    transition: top 0.5s; 
+    transition: all ease-out 0.5s;
+	-webkit-transition: all ease-out 0.5s;
 
     #home {
         img {
@@ -83,9 +84,8 @@ body {
         align-items: center;
     }
 
-.home{
+.home {
     width: 100%;
-    height: auto;
     display: grid;
     grid-template-columns: 1fr 1fr;
     grid-template-areas: "leftCol rightCol";
@@ -147,6 +147,24 @@ body {
     }
 }
 
+.space {
+    height: 60px;
+    width: 100%;
+}
+
+section {
+    width: 100%;
+    height: 650px;
+}
+
+.sections {
+    height: 590px;
+    bottom: 0;
+
+    h1{
+        margin: 0 auto;
+    }
+}
 
 
 /* ----------- SMARTPHONES ----------- */
