Created initial about section in home

--- a/styles/_colors.scss
+++ b/styles/_colors.scss
@@ -1,3 +1,5 @@
-$text-main: rgb(51, 51, 51);
+$text1: rgb(51, 51, 51);
+$text1-light: rgba(51, 51, 51, 0.8);
+$text2: rgb(50, 114, 138);
 $bg-light: rgba(112, 157, 170, 0.1);
 $nav-light: rgba(241, 240, 239, 0.5);
