--- a/styles/main.css
+++ b/styles/main.css
@@ -30,13 +30,13 @@ body {
   /* Style the navbar links */
 }
 
-#navbar #home img {
+#navbar #link1 img {
   width: 10%;
   margin: 3% auto;
 }
 
-#navbar .link {
-  color: #333333;
+#navbar .links {
+  color: #32728a;
   font-weight: 500;
   text-decoration: none;
   letter-spacing: 0;
@@ -45,12 +45,12 @@ body {
   line-height: 25px;
 }
 
-#navbar .link:hover, #navbar .link:active {
+#navbar .links:hover, #navbar .links:active {
   letter-spacing: 5px;
   font-weight: 700;
 }
 
-#navbar .link:after, #navbar .link:before {
+#navbar .links:after, #navbar .links:before {
   -webkit-backface-visibility: hidden;
           backface-visibility: hidden;
   border: 1px solid rgba(241, 240, 239, 0.5);
@@ -64,41 +64,22 @@ body {
   width: 0;
 }
 
-#navbar .link:hover:after, #navbar .link:hover:before {
+#navbar .links:hover:after, #navbar .links:hover:before {
   -webkit-backface-visibility: hidden;
           backface-visibility: hidden;
-  border-color: #333333;
+  border-color: #32728a;
   -webkit-transition: width 350ms ease-in-out;
   transition: width 350ms ease-in-out;
   width: 80%;
 }
 
-#navbar .link:hover:before {
+#navbar .links:hover:before {
   bottom: auto;
   top: 0;
   width: 80%;
 }
 
-.displayNav {
-  top: 0px;
-  -webkit-transition: 0.3s;
-  transition: 0.3s;
-  opacity: 1;
-}
-
-.flexboxCenter {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-}
-
-.home {
+#mhome {
   width: 100%;
   display: -ms-grid;
   display: grid;
@@ -107,7 +88,7 @@ body {
       grid-template-areas: "leftCol rightCol";
 }
 
-.home .left {
+#mhome .left {
   -ms-grid-row: 1;
   -ms-grid-column: 1;
   grid-area: leftCol;
@@ -115,21 +96,21 @@ body {
   background-color: rgba(112, 157, 170, 0.1);
 }
 
-.home .left #logo {
+#mhome .left #logo {
   width: 35%;
   position: relative;
   top: 25%;
   left: 35%;
 }
 
-.home .right {
+#mhome .right {
   -ms-grid-row: 1;
   -ms-grid-column: 2;
   grid-area: rightCol;
   height: 650px;
 }
 
-.home .right #hello {
+#mhome .right #hello {
   font-family: 'Raleway', sans-serif;
   font-weight: 900;
   font-size: 7em;
@@ -180,23 +161,91 @@ body {
   }
 }
 
-.space {
-  height: 60px;
-  width: 100%;
-}
-
-section {
-  width: 100%;
-  height: 650px;
-}
-
 .sections {
-  height: 590px;
+  height: 650px;
   bottom: 0;
 }
 
 .sections h1 {
   margin: 0 auto;
+}
+
+#mabout {
+  width: 100%;
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: 1fr 1fr;
+      grid-template-columns: 1fr 1fr;
+      grid-template-areas: "leftCol rightCol";
+}
+
+#mabout .left {
+  -ms-grid-row: 1;
+  -ms-grid-column: 1;
+  grid-area: leftCol;
+  height: 650px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+#mabout .left h4 {
+  font-family: 'Raleway', sans-serif;
+  font-weight: 700;
+  font-style: italic;
+  font-size: 2.5em;
+  text-align: right;
+  margin: 0;
+  color: rgba(51, 51, 51, 0.8);
+}
+
+#mabout .left h2 {
+  font-family: 'Raleway', sans-serif;
+  font-weight: 900;
+  font-size: 6em;
+  text-align: right;
+  margin: -5% 0 0 0;
+  color: #32728a;
+}
+
+#mabout .left p {
+  font-family: 'Vollkorn', serif;
+  font-size: 1.25em;
+  text-align: right;
+  margin: 5% 0 0 20%;
+  color: #333333;
+}
+
+#mabout .right {
+  -ms-grid-row: 1;
+  -ms-grid-column: 2;
+  grid-area: rightCol;
+  height: 650px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+#mabout .right img {
+  width: 55%;
+  border-radius: 50%;
+  opacity: 90%;
 }
 
 /* ----------- SMARTPHONES ----------- */
