--- a/styles/main.css
+++ b/styles/main.css
@@ -287,7 +287,7 @@ body {
   -ms-grid-row: 1;
   -ms-grid-column: 1;
   grid-area: leftCol;
-  height: 500px;
+  height: 400px;
 }
 
 #scontact .left p {
@@ -315,7 +315,7 @@ body {
   -ms-grid-row: 1;
   -ms-grid-column: 2;
   grid-area: rightCol;
-  height: 500px;
+  height: 400px;
 }
 
 #scontact .right table {
@@ -370,6 +370,20 @@ body {
 
 #scontact .right table input[type=submit]:hover {
   background-color: #32728a;
+}
+
+#footer {
+  z-index: 998;
+  background-color: rgba(112, 157, 170, 0.1);
+  height: 65px;
+  width: 100%;
+}
+
+#footer p {
+  text-align: center;
+  font-family: 'Raleway', sans-serif;
+  font-size: 0.75em;
+  color: rgba(51, 51, 51, 0.8);
 }
 
 /* ----------- SMARTPHONES ----------- */
