--- a/styles/main.css
+++ b/styles/main.css
@@ -262,7 +262,7 @@ body {
 }
 
 #sworks {
-  height: 500px;
+  height: auto;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -271,12 +271,16 @@ body {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  margin: auto;
+  -webkit-box-pack: space-evenly;
+      -ms-flex-pack: space-evenly;
+          justify-content: space-evenly;
+  margin: 3% 5%;
 }
 
-#sworks .hovereffect {
+#sworks .item {
+  margin: 2%;
   width: 25%;
-  height: 100%;
+  height: 200px;
   float: left;
   overflow: hidden;
   position: relative;
@@ -284,7 +288,7 @@ body {
   cursor: default;
 }
 
-#sworks .hovereffect .overlay {
+#sworks .item .overlay {
   position: absolute;
   overflow: hidden;
   width: 80%;
@@ -301,27 +305,30 @@ body {
   transform: scale(0, 1);
 }
 
-#sworks .hovereffect:hover .overlay {
+#sworks .item:hover .overlay {
   opacity: 1;
   filter: alpha(opacity=100);
   -webkit-transform: scale(1);
   transform: scale(1);
 }
 
-#sworks .hovereffect img {
+#sworks .item img {
   display: block;
   position: relative;
   -webkit-transition: all 0.35s;
   transition: all 0.35s;
 }
 
-#sworks .hovereffect:hover img {
+#sworks .item:hover img {
   filter: url('data:image/svg+xml;charset=utf-8,<svg xmlns="http://www.w3.org/2000/svg"><filter id="filter"><feComponentTransfer color-interpolation-filters="sRGB"><feFuncR type="linear" slope="0.6" /><feFuncG type="linear" slope="0.6" /><feFuncB type="linear" slope="0.6" /></feComponentTransfer></filter></svg>#filter');
   filter: brightness(0.6);
   -webkit-filter: brightness(0.6);
 }
 
-#sworks .hovereffect h2 {
+#sworks .item h2 {
+  font-family: 'Raleway', sans-serif;
+  font-weight: 900;
+  font-size: 5em;
   text-transform: uppercase;
   text-align: center;
   position: relative;
@@ -339,8 +346,17 @@ body {
   transform: translate3d(0, -100%, 0);
 }
 
-#sworks .hovereffect a, #sworks .hovereffect p {
+#sworks .item h2 span {
+  font-weight: 500;
+  font-size: 0.75em;
+}
+
+#sworks .item a, #sworks .item p {
+  font-family: 'Vollkorn', serif;
+  font-weight: 400;
+  font-size: 1em;
   color: #FFF;
+  text-decoration: none;
   padding: 1em 0;
   opacity: 0;
   filter: alpha(opacity=0);
@@ -352,7 +368,7 @@ body {
   transform: translate3d(0, 100%, 0);
 }
 
-#sworks .hovereffect:hover a, #sworks .hovereffect:hover p, #sworks .hovereffect:hover h2 {
+#sworks .item:hover a, #sworks .item:hover p, #sworks .item:hover h2 {
   opacity: 1;
   filter: alpha(opacity=100);
   -webkit-transform: translate3d(0, 0, 0);
