--- a/styles/main.scss
+++ b/styles/main.scss
@@ -213,15 +213,17 @@ body {
 }
 
 #sworks {
-    height: 500px;
+    height: auto;
     display: flex;
     flex-wrap: wrap;
     align-items: center;
-    margin: auto;
+    justify-content: space-evenly;
+    margin: 3% 5%;
 
-    .hovereffect {
+    .item {
+        margin: 2%;
         width: 25%;
-        height: 100%;
+        height: 200px;
         float: left;
         overflow: hidden;
         position: relative;
@@ -229,7 +231,7 @@ body {
         cursor: default;
     }
 
-    .hovereffect .overlay {
+    .item .overlay {
         position: absolute;
         overflow: hidden;
         width: 80%;
@@ -245,7 +247,7 @@ body {
         transform: scale(0,1);
     }
 
-    .hovereffect:hover .overlay {
+    .item:hover .overlay {
         opacity: 1;
         filter: alpha(opacity=100);
         -webkit-transform: scale(1);
@@ -253,20 +255,23 @@ body {
         transform: scale(1);
     }
 
-    .hovereffect img {
+    .item img {
         display: block;
         position: relative;
         -webkit-transition: all 0.35s;
         transition: all 0.35s;
     }
 
-    .hovereffect:hover img {
+    .item:hover img {
         filter: url('data:image/svg+xml;charset=utf-8,<svg xmlns="http://www.w3.org/2000/svg"><filter id="filter"><feComponentTransfer color-interpolation-filters="sRGB"><feFuncR type="linear" slope="0.6" /><feFuncG type="linear" slope="0.6" /><feFuncB type="linear" slope="0.6" /></feComponentTransfer></filter></svg>#filter');
         filter: brightness(0.6);
         -webkit-filter: brightness(0.6);
     }
 
-    .hovereffect h2 {
+    .item h2 {
+        font-family: 'Raleway', sans-serif;
+        font-weight: 900;
+        font-size: 5em;
         text-transform: uppercase;
         text-align: center;
         position: relative;
@@ -280,10 +285,19 @@ body {
         transition: opacity 0.35s, transform 0.35s;
         -webkit-transform: translate3d(0,-100%,0);
         transform: translate3d(0,-100%,0);
+
+        span {
+            font-weight: 500;
+            font-size: 0.75em;
+        }
     }
 
-    .hovereffect a, .hovereffect p {
+    .item a, .item p {
+        font-family: 'Vollkorn', serif;
+        font-weight: 400;
+        font-size: 1em;
         color: #FFF;
+        text-decoration: none;
         padding: 1em 0;
         opacity: 0;
         filter: alpha(opacity=0);
@@ -293,7 +307,7 @@ body {
         transform: translate3d(0,100%,0);
     }
 
-    .hovereffect:hover a, .hovereffect:hover p, .hovereffect:hover h2 {
+    .item:hover a, .item:hover p, .item:hover h2 {
         opacity: 1;
         filter: alpha(opacity=100);
         -webkit-transform: translate3d(0,0,0);
