--- a/styles/main.scss
+++ b/styles/main.scss
@@ -8,10 +8,10 @@ body {
 }
 
 #back2top {
-    bottom: 5%;
+    bottom: 10%;
     right: 5%;
     position: fixed;
-    width: 5%;
+    width: 4%;
     z-index: 995;
 
     img {
@@ -244,7 +244,7 @@ body {
         border-radius: 2%;
         margin: 2%;
         width: 25%;
-        height: 200px;
+        height: 220px;
         float: left;
         overflow: hidden;
         position: relative;
@@ -278,10 +278,16 @@ body {
     }
 
     .item img {
+        height:110%;
         display: block;
-        position: relative;
+        position: absolute;
+        left: 50%;
+        top: 50%;
         -webkit-transition: all 0.35s;
         transition: all 0.35s;
+        -webkit-transform: translate(-50%,-50%);
+        -ms-transform: translate(-50%,-50%);
+        transform: translate(-50%,-50%);
     }
 
     .item:hover img {
