--- a/styles/main.scss
+++ b/styles/main.scss
@@ -13,6 +13,7 @@ body {
     position: fixed;
     width: 4%;
     z-index: 995;
+    visibility:hidden;
 
     img {
         width: 100%;
@@ -23,7 +24,6 @@ body {
         opacity: 70%;
     }
 }
-
 
 #navbar {
     z-index: 999;
