--- a/styles/main.scss
+++ b/styles/main.scss
@@ -1,5 +1,10 @@
 @import './colors';
 
+html {
+
+    width: 100%;
+}
+
 body {
     margin: 0;
     background-image: url("../images/mainbg.png");
@@ -126,30 +131,12 @@ body {
             animation-name: enterhello;
             animation-duration: 2s;
         }
-
-        // #afterhello {
-        //     font-family: 'Raleway', sans-serif;
-        //     font-weight: 500;
-        //     font-size: 105px;
-        //     animation: blink 1s linear infinite;
-        //     animation-delay: 2s;
-        //     visibility: hidden;
-        //     position : fixed;
-        //     top: 28%;
-        //     left: 75%;
-        // }
         
         @keyframes enterhello {
             0% { transform: translateX(-30%); opacity : 0 }
             20% { transform: translateX(-25%); opacity : 0 }
             100% { transform: translateX(0%);; opacity: 1}
         }
-        
-        // @keyframes blink{
-        //     0%{opacity: 0; visibility: visible;}
-        //     50%{opacity: 0.8; visibility: visible;}
-        //     100%{opacity: 0; visibility: visible;}
-        // }
     }
 }
 
@@ -415,7 +402,7 @@ body {
             .label {
                 font-weight: 700;
                 font-family: 1em;
-                color: $text1-light;;
+                color: $text1-light;
                 width: 25%;
                 padding: 0;
                 vertical-align: top;
@@ -430,10 +417,11 @@ body {
 
             /* Style inputs with type="text", select elements and textareas */
             input[type=text], input[type=email], textarea {
+                font-family: 'Raleway', sans-serif;
                 width: 100%; /* Full width */
-                padding: 12px; /* Some padding */ 
+                padding: 5%; /* Some padding */ 
                 border: 1px solid #ccc; /* Gray border */
-                border-radius: 5px; /* Rounded borders */
+                border-radius: 3%; /* Rounded borders */
                 box-sizing: border-box; /* Make sure that padding and width stays in place */
                 resize: vertical /* Allow the user to vertically resize the textarea (not horizontally) */
             }
@@ -445,9 +433,9 @@ body {
                 font-size: 0.75em;
                 background-color: $bg;
                 color: white;
-                padding: 12px 20px;
+                padding: 5% 8%;
                 border: none;
-                border-radius: 4px;
+                border-radius: 10%;
                 cursor: pointer;
             }
 
@@ -476,7 +464,7 @@ body {
 
 /* ----------- SMARTPHONES ----------- */
 @media only screen 
-and (max-width : 415px) {
+and (max-width : 414px) {
     #navbar {
         visibility: hidden;
         // width: auto;
@@ -502,15 +490,14 @@ and (max-width : 415px) {
         // }
     }
 
-    .shome {
+    #shome {
         width: 100%;
-        grid-template-rows: 1fr;
-        grid-template-areas:    "leftCol"
-                                "rightCol";
+        display: flex;
+        flex-direction: column;
 
         .left {
-            height: 200px;
-            grid-area: leftCol;
+            width: 100%;
+            height: 250px;
 
             #logo {
                 width: 20%;
@@ -520,11 +507,11 @@ and (max-width : 415px) {
         }
 
         .right {
-            height: 200px;
-            grid-area: rightCol;
+            width: 100%;
+            height: 250px;
 
             #hello {
-                font-size: 5em;
+                font-size: 4.5em;
                 margin: 0 auto;
             }
 
@@ -535,4 +522,134 @@ and (max-width : 415px) {
             }
         }
     }
+
+    .label {
+        height: 75px;
+        margin: 0 auto;
+
+        h1 {
+            font-size: 2.75em;
+        }
+    }
+
+    #sabout {
+        width: 100%;
+        display: flex;
+        flex-direction: column-reverse;
+
+        .left {
+            margin: 0;
+            height: 250px;
+            text-align: center;
+
+            h4 {
+                font-size: 1.5em;
+                text-align: center;
+            }
+
+            h2 {
+                font-size: 4em;
+                text-align: center;
+                margin: -3% 0 0 0;
+            }
+
+            p {
+                font-size: 0.85em;
+                text-align: center;
+                margin: 3% 10%;
+            }
+        }
+
+        .right {
+            height: 250px;
+
+            #aboutpic {
+                width: 45%;
+            }
+        }
+    }
+
+    #sworks {
+        height: auto;
+        display: flex;
+        flex-wrap: wrap;
+        align-items: center;
+        justify-content: space-evenly;
+        padding: 2% 5%;
+        margin-top: 3%;
+
+    .item {
+        border-radius: 3%;
+        margin: 5%;
+        width: 40%;
+        height: 150px;
+
+    }
+
+    }
+
+    #mworks {
+        background-color: $bg-light;
+        text-align: center;
+        padding: 2% 0 7% 0;
+
+        a {
+            font-size: 0.70em;
+        }
+    }
+
+   #scontact {
+        display: flex;
+        flex-direction: column;
+
+        .left {
+            height: auto;
+
+            p {
+                font-size: 0.85em;
+                text-align: center;
+                margin: 4% auto;
+            }
+
+            .socials {
+                width: 60%;
+                text-align: center;
+                margin: 2% auto;
+            }
+        }
+
+        .right {
+            font-family: 'Raleway', sans-serif;
+            height: auto;
+
+            table {
+                margin: 4% auto;
+                width: 80%;
+
+                .label {
+                    font-size: 0.85em;
+                    width: 25%;
+                    height: 25%;
+                }
+
+                .tbox {
+                    font-weight: 500;
+                    width: 75%;
+                    margin: 0 auto;
+                }
+
+                input[type=submit] {
+                    font-size: 0.55em;
+                }
+            }
+        }
+    }
+
+    #footer {
+        
+        p {
+            font-size: 0.55em;
+        }
+    }
+
 }
