--- a/styles/main.css
+++ b/styles/main.css
@@ -1,8 +1,6 @@
-html {
-  width: 100%;
-}
-
 body {
+  overflow-x: hidden;
+  max-width: 100%;
   margin: 0;
   background-image: url("../images/mainbg.png");
   background-position: center;
@@ -552,6 +550,13 @@ body {
 
 /* ----------- SMARTPHONES ----------- */
 @media only screen and (max-width: 414px) {
+  body {
+    overflow-x: hidden;
+    max-width: 100%;
+  }
+  #back2top {
+    width: 10%;
+  }
   #navbar {
     visibility: hidden;
   }
@@ -570,17 +575,19 @@ body {
     height: 250px;
   }
   #shome .left #logo {
-    width: 20%;
+    width: 25%;
     top: 20%;
-    left: 40%;
+    text-align: center;
   }
   #shome .right {
     width: 100%;
     height: 250px;
   }
   #shome .right #hello {
+    top: 15%;
+    text-align: center;
+    width: 50%;
     font-size: 4.5em;
-    margin: 0 auto;
   }
   @-webkit-keyframes enterhello {
     0% {
