--- a/styles/main.css
+++ b/styles/main.css
@@ -561,7 +561,7 @@ body {
 
 #scontact .right table .label {
   font-weight: 700;
-  font-family: 1em;
+  font-size: 1em;
   color: rgba(51, 51, 51, 0.8);
   width: 25%;
   padding: 0;
@@ -571,6 +571,7 @@ body {
 
 #scontact .right table .tbox {
   font-weight: 500;
+  font-size: 1em;
   width: 75%;
   margin: 0 auto;
 }
@@ -579,7 +580,7 @@ body {
   font-family: 'Raleway', sans-serif;
   width: 100%;
   /* Full width */
-  padding: 5%;
+  padding: 3%;
   /* Some padding */
   border: 1px solid #ccc;
   /* Gray border */
@@ -619,6 +620,64 @@ body {
   font-family: 'Raleway', sans-serif;
   font-size: 0.75em;
   color: rgba(51, 51, 51, 0.8);
+}
+
+.icontent {
+  width: 100%;
+  margin: 3% auto;
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: 5fr 2fr;
+      grid-template-columns: 5fr 2fr;
+      grid-template-areas: "main side";
+}
+
+.icontent .imain {
+  -ms-grid-row: 1;
+  -ms-grid-column: 1;
+  grid-area: main;
+  height: calc(100vh - 80px);
+  overflow-y: auto;
+  padding: 2%;
+  background-color: rgba(112, 157, 170, 0.1);
+  text-align: center;
+}
+
+.icontent .imain img {
+  height: auto;
+  width: 95%;
+  margin: 2%;
+}
+
+.icontent .iside {
+  -ms-grid-row: 1;
+  -ms-grid-column: 2;
+  grid-area: side;
+  padding: 5%;
+  background-color: rgba(241, 240, 239, 0.5);
+  position: relative;
+}
+
+.icontent .iside h1 {
+  font-family: 'Raleway', sans-serif;
+  font-weight: 900;
+  font-size: 3em;
+  text-transform: uppercase;
+  color: #333333;
+}
+
+.icontent .iside h2 {
+  font-family: 'Raleway', sans-serif;
+  font-weight: 500;
+  font-size: 1.5em;
+  text-transform: uppercase;
+  color: rgba(51, 51, 51, 0.8);
+  margin-top: -5%;
+}
+
+.icontent .iside p {
+  font-family: 'Vollkorn', serif;
+  font-size: 1em;
 }
 
 /* ----------- SMARTPHONES ----------- */
