--- a/styles/main.scss
+++ b/styles/main.scss
@@ -462,7 +462,7 @@ body {
 
             .label {
                 font-weight: 700;
-                font-family: 1em;
+                font-size: 1em;
                 color: $text1-light;
                 width: 25%;
                 padding: 0;
@@ -472,6 +472,7 @@ body {
 
             .tbox {
                 font-weight: 500;
+                font-size: 1em;
                 width: 75%;
                 margin: 0 auto;
             }
@@ -480,7 +481,7 @@ body {
             input[type=text], input[type=email], textarea {
                 font-family: 'Raleway', sans-serif;
                 width: 100%; /* Full width */
-                padding: 5%; /* Some padding */ 
+                padding: 3%; /* Some padding */ 
                 border: 1px solid #ccc; /* Gray border */
                 border-radius: 3%; /* Rounded borders */
                 box-sizing: border-box; /* Make sure that padding and width stays in place */
@@ -522,6 +523,57 @@ body {
     }
 }
 
+.icontent {
+    width: 100%;
+    margin: 3% auto;
+    display: grid;
+    grid-template-columns: 5fr 2fr;
+    grid-template-areas: "main side";
+
+    .imain {
+        grid-area: main;
+        height: calc(100vh - 80px);
+        overflow-y: auto;
+        padding: 2%;
+        background-color: $bg-light;
+        text-align: center;
+
+        img {
+            height: auto;
+            width: 95%; 
+            margin: 2%;
+        }
+    }
+
+    .iside {
+        grid-area: side;
+        padding: 5%;
+        background-color: $nav-light;
+        position: relative;
+
+        h1 {
+            font-family: 'Raleway', sans-serif;
+            font-weight: 900;
+            font-size: 3em;
+            text-transform: uppercase;
+            color: $text1;
+        }
+
+        h2 {
+            font-family: 'Raleway', sans-serif;
+            font-weight: 500;
+            font-size: 1.5em;
+            text-transform: uppercase;
+            color: $text1-light;
+            margin-top: -5%;
+        }
+
+        p {
+            font-family: 'Vollkorn', serif;
+            font-size: 1em;
+        }
+    }
+}
 
 /* ----------- SMARTPHONES ----------- */
 @media only screen 
