--- a/styles/main.css
+++ b/styles/main.css
@@ -624,11 +624,11 @@ body {
 
 .icontent {
   width: 100%;
-  margin: 3% auto;
+  margin: 5% auto;
   display: -ms-grid;
   display: grid;
-  -ms-grid-columns: 5fr 2fr;
-      grid-template-columns: 5fr 2fr;
+  -ms-grid-columns: 8fr 4fr;
+      grid-template-columns: 8fr 4fr;
       grid-template-areas: "main side";
 }
 
@@ -636,39 +636,44 @@ body {
   -ms-grid-row: 1;
   -ms-grid-column: 1;
   grid-area: main;
-  height: calc(100vh - 80px);
-  overflow-y: auto;
+  height: 500px;
   padding: 2%;
   background-color: rgba(112, 157, 170, 0.1);
-  text-align: center;
+  text-align: right;
 }
 
-.icontent .imain img {
+.icontent .imain .imain_inner {
+  margin-top: 1.5%;
+  height: 95%;
+  overflow-y: auto;
+}
+
+.icontent .imain .imain_inner img {
   height: auto;
-  width: 95%;
-  margin: 2%;
+  width: 90%;
 }
 
 .icontent .iside {
   -ms-grid-row: 1;
   -ms-grid-column: 2;
   grid-area: side;
-  padding: 5%;
+  padding: 5% 20% 5% 5%;
   background-color: rgba(241, 240, 239, 0.5);
   position: relative;
+  text-align: left;
 }
 
 .icontent .iside h1 {
   font-family: 'Raleway', sans-serif;
   font-weight: 900;
-  font-size: 3em;
+  font-size: 2.5em;
   text-transform: uppercase;
   color: #333333;
 }
 
 .icontent .iside h2 {
   font-family: 'Raleway', sans-serif;
-  font-weight: 500;
+  font-weight: 700;
   font-size: 1.5em;
   text-transform: uppercase;
   color: rgba(51, 51, 51, 0.8);
