--- a/styles/main.scss
+++ b/styles/main.scss
@@ -525,43 +525,48 @@ body {
 
 .icontent {
     width: 100%;
-    margin: 3% auto;
+    margin: 5% auto;
     display: grid;
-    grid-template-columns: 5fr 2fr;
+    grid-template-columns: 8fr 4fr;
     grid-template-areas: "main side";
 
     .imain {
         grid-area: main;
-        height: calc(100vh - 80px);
-        overflow-y: auto;
+        height: 500px;
         padding: 2%;
         background-color: $bg-light;
-        text-align: center;
+        text-align: right;
 
-        img {
-            height: auto;
-            width: 95%; 
-            margin: 2%;
+        .imain_inner {
+            margin-top:1.5%;
+            height: 95%;
+            overflow-y: auto;
+
+            img {
+                height: auto;
+                width: 90%; 
+            }
         }
     }
 
     .iside {
         grid-area: side;
-        padding: 5%;
+        padding: 5% 20% 5% 5%;
         background-color: $nav-light;
         position: relative;
+        text-align: left;
 
         h1 {
             font-family: 'Raleway', sans-serif;
             font-weight: 900;
-            font-size: 3em;
+            font-size: 2.5em;
             text-transform: uppercase;
             color: $text1;
         }
 
         h2 {
             font-family: 'Raleway', sans-serif;
-            font-weight: 500;
+            font-weight: 700;
             font-size: 1.5em;
             text-transform: uppercase;
             color: $text1-light;
