--- a/styles/main.css
+++ b/styles/main.css
@@ -669,6 +669,7 @@ body {
   font-size: 2.5em;
   text-transform: uppercase;
   color: #333333;
+  margin-bottom: -5%;
 }
 
 .icontent .iside h2 {
@@ -677,7 +678,6 @@ body {
   font-size: 1.5em;
   text-transform: uppercase;
   color: rgba(51, 51, 51, 0.8);
-  margin-top: -5%;
 }
 
 .icontent .iside p {
