--- a/styles/main.scss
+++ b/styles/main.scss
@@ -562,6 +562,7 @@ body {
             font-size: 2.5em;
             text-transform: uppercase;
             color: $text1;
+            margin-bottom: -5%;
         }
 
         h2 {
@@ -570,7 +571,6 @@ body {
             font-size: 1.5em;
             text-transform: uppercase;
             color: $text1-light;
-            margin-top: -5%;
         }
 
         p {
