--- a/styles/main.css
+++ b/styles/main.css
@@ -901,5 +901,39 @@ body {
   #footer p {
     font-size: 0.55em;
   }
+  .icontent {
+    width: 100%;
+    margin: 5% auto;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: reverse;
+        -ms-flex-direction: column-reverse;
+            flex-direction: column-reverse;
+  }
+  .icontent .imain {
+    padding: 2%;
+    text-align: center;
+  }
+  .icontent .imain .imain_inner img {
+    width: 80%;
+  }
+  .icontent .iside {
+    padding: 2% 10%;
+    text-align: center;
+  }
+  .icontent .iside h1 {
+    font-size: 2em;
+    margin-bottom: -2%;
+  }
+  .icontent .iside h2 {
+    font-size: 1em;
+    margin-bottom: -2%;
+  }
+  .icontent .iside p {
+    font-family: 'Vollkorn', serif;
+    font-size: 1em;
+  }
 }
 /*# sourceMappingURL=main.css.map */
